unpackaged/main/default/objects/Event_Threshold__mdt/Event_Threshold__mdt.object-meta.xml
<CustomObject>
    <description>The thresholds set by the operations team to create Order and Job Events.</description>
    <label>Event Threshold</label>
    <pluralLabel>Event Thresholds</pluralLabel>
</CustomObject>