unpackaged/main/default/objects/Event_Threshold__mdt/fields/Currency_Ref_Value__c.field-meta.xml
<CustomField>
    <fullName>Currency_Ref_Value__c</fullName>
    <label>Currency Ref Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>