unpackaged/main/default/objects/Event_Threshold__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Where is this referenced?</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>