unpackaged/main/default/objects/Event_Threshold__mdt/fields/Number_Ref_Value__c.field-meta.xml
<CustomField>
    <fullName>Number_Ref_Value__c</fullName>
    <label>Number Ref Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>